patches-dsl/tests/fixtures/errors/arity_mismatch.patches
template Mismatch(n: int, m: int) {
    in:  x
    out: y
    module a : Sum(channels: <n>)
    module b : Sum(channels: <m>)
    a.in[*n] <- b.out[*m]
    $.x <- a.in[0]
    $.y <- b.out[0]
}
patch {
    module t   : Mismatch(n: 2, m: 3)
    module out : AudioOut
    out.in_left[0] <-[1.0]- t.y
}
